# tds-scraper

./: .gitignore  README.md  mypy.toml  pyproject.toml  ruff.toml
.github/workflows/: check-pull-request.yml
src/python_rye_template/: __init__.py  hoge.py
src/tds_scraper/: __init__.py
src/tds_scraper/common/: log_handler.py  make_dir.py  reduce_memory.py
src/tds_scraper/core/: scraping.py
src/tds_scraper/core/scraper/: common_scraper.py  distance_scraper.py  land_to_theme.py  wait_time_scraper.py  weather_scraper.py
tests/: test_hoge.py
