[project]
name = "tds-scraper"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "jumtra", email = "hoge@fuga" }
]
dependencies = [
    "numpy>=2.1.1",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "pandas>=2.2.3",
    "tqdm>=4.67.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.11.2",
    "ruff>=0.6.4",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tds_scraper"]
